<resources>
    <string name="app_name">Sage Recipe Box</string>
    <string name="description">description</string>
    <string name="done">done</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_personal_page">PersonalPageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_receipt">New Recipe</string>
    <string name="my_profile">My Profile</string>
    <string name="receipt_box">Recipe Box</string>
    <string name="my_receipe_box">My Recipe Box</string>
    <string name="home">Home</string>
    <string name="shared_lbl">shared</string>
    <string name="recipe_lbl">recipe</string>
    <string name="settings">Setting</string>
    <string name="title_activity_login">Sage Recipe Box</string>
    <string name="app_id">Sage</string>
    <string name="facebook_app_id">405758049632877</string>
    <string name="title_activity_new_receipe">NewReceipeActivity</string>
    <string name="no_internet_connection">Please check your internet connection</string>
    <string name="link">Link</string>
    <string name="add_link">Link</string>
    <string name="owner_recipe_by_lbl">A Recipe By:</string>
    <string name="add_link_description">Add a recipe from any website</string>
    <string name="add_picture">Picture</string>
    <string name="add_picture_description">Add a recipe as a picture</string>
    <string name="add_text">Text</string>
    <string name="add_text_description">Type in your own recipe</string>
    <string name="add_receipe_title"> Add a recipe</string>
    <string name="enter_new_name">Enter New Name:</string>
    <string name="title_activity_search_link">SearchLinkActivity</string>
    <string name="search_title">Search Recipe</string>
    <string name="search_link_title">Search Recipe Online</string>
    <string name="search_label">Search Recipe</string>
    <string name="search_hint">Search for a recipe</string>
    <string name="title_activity_search_link_dialog">SearchLinkDialogActivity</string>
    <string name="text"> Enter text </string>
    <string name="add"> Add </string>
    <string name="no_records"> no results match your search </string>
    <string name="title_activity_profile_page">ProfilePageActivity</string>
    <string name="newsfeed_separator">-</string>
    <string name="add_ingredients_header">Ingredients:</string>
    <string name="add_ingredients_content">Add Ingredients</string>
    <string name="add_preparation_header">Preparation:</string>
    <string name="add_preparation_content">Add Preparation</string>
    <string name="add_comments_header">Comments:</string>
    <string name="add_comments_content">Add Comments</string>
    <string name="add_recipe_title">Add Title</string>
    <string name="add_recipe_title_toolbar">New Recipe</string>
    <string name="edit_category_name">Enter Name</string>
    <string name="edit_picture">Edit</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="like_recipe">Like</string>
    <string name="unlike_recipe">Unlike</string>
    <string name="comment_recipe">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="cancel_save_category">Cancel</string>
    <string name="save_category">Save</string>
    <string name="add_new_category">Add A New Category</string>
    <string name="add_new_recipe">Add A New Recipe</string>
    <string name="add_new_sub_category">Add New</string>
    <string name="follow_user">Follow</string>
    <string name="unfollow_user">Unfollow</string>
    <string name="user_followed_by">followed by </string>
    <string name="publish_recipe">Share Recipe</string>
    <string name="unpublish_recipe">Unpublished</string>
    <string name="delete_recipe">Delete</string>
    <string name="save_in_sub_category">Save In Category</string>
    <string name="move_recipe">Move</string>
    <string name="recipe_name_header">Recipe Name</string>
    <string name="recipe_published_header">Published</string>
    <string name="add_picture_label">Add Picture</string>
    <string name="add_recipe_as_picture_label">Add your pictured recipe here</string>
    <string name="confirm_delete_recipe_message">Delete Recipe?</string>
    <string name="confirm_you_will_loose_all_data">You will loose all data saved in the recipe.</string>
    <string name="cancel_delete_recipe_button_label">Cancel</string>
    <string name="confirm_delete_recipe_button_label">Delete</string>
    <string name="save_receipt_without_name_message">Please add a name to this recipe</string>
    <string name="go_back_to_recipe_label">Go Back</string>
    <string name="exit_recipe_without_saving_label">Exit Recipe</string>
    <string name="save_link">Save Link</string>
    <string name="title_activity_picture_recipe_page">PictureRecipePageActivity</string>
    <string name="title_activity_register_new_user">RegisterNewUserActivity</string>
    <string name="title_activity_link_recipe_page">LinkRecipePageActivity</string>
    <string name="title_activity_activity_categories_page">ActivityCategoriesPage</string>
    <string name="title_activity_activity_sub_category_page">ActivitySubCategoryPage</string>
    <string name="title_activity_add_recipe_as_link">AddRecipeAsLinkActivity</string>
    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_add_title">action_add_title</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_recipe_name">Enter Recipe Name</string>
    <string name="search_button_label">Search</string>
    <string name="newsfeed_welcome">Welcome</string>
    <string name="close_comments_popup">Back</string>
    <string name="action_cancel">Cancel Save Link</string>
    <string name="a_recipe_must_have_a_name_message">A recipe must have a name, so that you will be able to identify it in your recipe box</string>
    <string name="likes_comments_message">{0} likes, {1} comments</string>
    <string name="likes_message">{0} likes</string>
    <string name="confirm_exit_recipe_without_saving">Exit Recipe Without Saving?</string>
    <string name="exit_without_saving_button_label">Exit Recipe</string>
    <string name="go_back_to_recipe_button_label">Cancel</string>
    <string name="enter_email_to_reset_password">Enter your email to reset your password</string>
    <string name="continue_lbl">Continue</string>
    <string name="no_categories_lbl">Divide your recipes to categories per your liking! Add a category by clicking the \"+\" button above</string>
    <string name="reset_password_lbl">Reset</string>
    <string name="action_who_i_follow">Following</string>
    <string name="title_activity_display_link_web_page">DisplayLinkWebPageActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_select_gallery_or_camera">Add Photo</string>
    <string name="title_activity_search_my_recipes">SearchMyRecipesActivity</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="settings_title">Settings</string>
    <string name="who_i_follow_title">Following</string>
    <string name="followed_by_title">Followed By</string>
    <string name="search_my_follow_hint">Search Users I Follow</string>
    <string name="search_followed_by_hint">Search Users Who Follow Me</string>
    <string name="search_recipes_hint">Search</string>
    <string name="search_users_hint">Enter search text here</string>
    <string name="search_recipe_box_hint">Search Recipe Box</string>
    <string name="title_activity_display_who_ifollow">DisplayWhoIFollowActivity</string>
    <string name="title_activity_search_user">SearchUserActivity</string>
    <string name="first_and_last_name">First+Last Name</string>
    <string name="enter_name_lbl">Enter Name:</string>
    <string name="change_display_name">Change Name</string>
    <string name="did_not_enter_search_text">You did not enter search text</string>
    <string name="delete_category">Delete</string>
    <string name="attached_recipes_to_category">Can delete only empty categories</string>
    <string name="featured_recipe">Featured Recipe</string>
    <string name="a_lbl">a</string>
    <string name="attached_recipes_to_sub_category">Can delete only empty sub-categories</string>
    <string name="title_activity_change_user_display_name">ChangeUserDisplayNameActivity</string>
    <string name="title_activity_search_my_follow">SearchMyFollowActivity</string>
    <string name="title_activity_display_image">DisplayImageActivity</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="select_file">Select File</string>
    <string name="take_photo">Take Photo</string>
    <string name="no_connection_tap_to_retry">Cannot load page, tap to retry</string>
    <string name="failed_load_search_results_tap_to_retry">Cannot load search results, tap to retry</string>
    <string name="login_failed_no_connection">Login failed, please retry.</string>
    <string name="recipe_being_saved">Recipe is being saved.</string>
    <string name="already_registered_please_login">Already Registered? \n Please Login</string>
    <string name="agree_terms">I Accept</string>
    <string name="no_published_recipes_my_profile">You did not share any recipes. To share a recipe, switch the \"Share Recipe\" button in the recipe page to \"On\".</string>
    <string name="no_published_recipes_other_user_profile">This user does not have public recipes.</string>
    <string name="search_users_lbl">Users</string>
    <string name="search_recipes_lbl">Recipes</string>
</resources>