<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@drawable/appliction_panel_style"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/settings_title"
        android:textColor="#a6a6a6"
        android:textSize="20sp" />

    <Button
        android:id="@+id/logout_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="#a6a6a6"
        android:orientation="horizontal"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <Button
        android:id="@+id/change_password_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="#a6a6a6"
        android:orientation="horizontal"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

     <Button
        android:id="@+id/change_display_name_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="#a6a6a6"
        android:orientation="horizontal"
        android:text="@string/change_display_name"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />
    
    
    
</LinearLayout>