<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comments_likes_panel_recipe_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@drawable/appliction_panel_style"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/comments_likes_panel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/like_button_fragment"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/like_recipe"
            android:focusable="false"
            android:src="@drawable/empty_heart"
            android:textAllCaps="false" />

        <ImageButton
            android:id="@+id/unlike_button_fragment"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/unlike_recipe"
            android:focusable="false"
            android:src="@drawable/full_heart"
            android:textAllCaps="false" />

        <ImageButton
            android:id="@+id/comments_button_fragment"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/comment_recipe"
            android:focusable="false"
            android:src="@drawable/empty_comment"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/comments_likes_text_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/likes_comments_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/add_link_description"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>