<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comments_likes_panel_profile_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/appliction_panel_style"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/are_you_sure_delete_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/confirm_delete_recipe_message"
        android:textColor="#6e6e6e"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/category_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="1dp"
        android:background="@color/transparent" >

        <Button
            android:id="@+id/cancel_delete_recipe"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_toLeftOf="@+id/confirm_delete_recipe"
            android:layout_toStartOf="@+id/confirm_delete_recipe"
            android:background="@drawable/application_button_style"
            android:text="@string/cancel_delete_recipe_button_label"
            android:textAllCaps="false"
            android:textColor="#548235"
            android:textSize="12sp" />

        <Button
            android:id="@+id/confirm_delete_recipe"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/application_button_style"
            android:text="@string/confirm_delete_recipe_button_label"
            android:textAllCaps="false"
            android:textColor="#548235"
            android:textSize="12sp" />
    </RelativeLayout>

</LinearLayout>