<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_bar_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/search_users_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/search_user_icon"
            android:layout_toStartOf="@+id/search_user_icon"
            android:background="@android:color/transparent"
            android:hint="@string/search_users_hint"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

        <ImageView
            android:id="@+id/search_user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="bottom"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/search_white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_users_panel"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/search_recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_recipes_lbl"
            android:textAllCaps="true"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/search_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:text="@string/search_users_lbl"
            android:textColor="#000000"
            android:background="#d3d3d3"
            android:textSize="13sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"/>
    </LinearLayout>


</RelativeLayout>