<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/failed_to_load_panel"
        android:layout_gravity="center"
        android:gravity="center">


        <ImageView
            android:id="@+id/failed_to_load_icon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:src="@drawable/no_internet_connection"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/failed_to_load_lbl"
            android:layout_below="@id/failed_to_load_icon"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"

            android:text="@string/no_connection_tap_to_retry"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/no_published_recipes_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/no_published_recipes_my_profile"
        android:textColor="#6e6e6e"
        android:textSize="20sp"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/no_published_recipes_other_user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/no_published_recipes_other_user_profile"
        android:textColor="#6e6e6e"
        android:textSize="20sp"
        android:visibility="gone"/>




    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:fadeScrollbars="false"
        android:scrollX="0px"
        android:scrollY="0px"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="20dip"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" >
    </ListView>
</RelativeLayout>